--- a/Rmd/cost_analysis_v3.Rmd
+++ b/Rmd/cost_analysis_v3.Rmd
@@ -191,7 +191,49 @@ Unfortunately, there are no formal uncertainty numbers given for any of the data
 * Choose distributions for the uncertain data values, centered around the value we have.
 * Run a Monte Carlo sensitivity analysis, meaning to draw a sample from each of the distributions, run the model using the sampled values, and repeat many times.
 * Present the results of the sensitivity analysis with the two caveats that it only partially accounts for uncertainty and that the magnitudes of the uncertainty of the different outputs are only relative, not absolute, because we don't really know the true distributions for the underlying data.
-**continue to add to this**
+
+### Sources of data uncertainty, and which will be included in sensitivity analysis
+
+*Uncertainty in BEA input-output data.* The make and use tables from BEA consist of a mixture of measured and modeled values. Unfortunately the methods are fairly opaque so no quantitative uncertainty is available. It would be prohibitively complicated to account for this uncertainty so we are ignoring it.
+
+*Uncertainty in EPA environmental impact data.* As mentioned above, the authors of the USEEIO model documented the quality/reliability of all their environmental data. Again, no quantitative uncertainty is available. The underlying data are fairly complex and it would be very difficult to account for its uncertainty. For now we are ignoring it as well.
+
+*Uncertainty in FAO baseline waste rate data.* The FAO waste rate data come from many different sources without explicit uncertainty given. We are accounting for this uncertainty in the sensitivity analysis.
+
+*Uncertainty in weighting parameters.* There are two types of weights being used. One is the proportion of each sector that is assigned to the FSC, and the other is the weight of each of the 13 food categories in each sector. These weights are derived from a variety of sources as described elsewhere in this document. It is likely that the food-nonfood proportion in each sector is much more important for the results than the relative proportions of food within each sector. Therefore, we are accounting for the uncertainty in the food-nonfood proportion weights but not the relative food category proportion weights.
+
+### Distributions around parameter values
+
+Both the FAO baseline waste rate data and the food-nonfood proportion data are proportions bounded between 0 and 1. A sensible distribution to use in this case is the beta distribution which is defined on the interval [0, 1]. The beta distribution has two parameters. We can write the beta distribution this way, which will have its mode at $p$. The value of $f$ determines the width of the peak; the higher $f$, the narrower the peak.
+
+$$Beta(fp, f(1-p))$$
+
+I chose the value $f = 100$ for all distributions. Figure 6 shows beta distributions with $f = 100$ and modes of 0.1, 0.2, 0.4, 0.5, 0.6, 0.8, and 0.9. Modes close to 0 or 1 have narrower distributions than modes close to 0.5, which makes sense.
+
+```{r echo = FALSE, message = FALSE, fig.cap = 'Beta distributions with a variety of modes', fig.height = 3, fig.width = 4}
+library(ggplot2)
+cols <- RColorBrewer::brewer.pal(8, 'Set3')[-2]
+ps <- c(10,20,40,50,60,80,90)
+
+distplot <- ggplot(data.frame(x=c(0,1)), aes(x)) +
+  scale_y_continuous(limits=c(0,15), expand=c(0,0)) +
+  theme_bw()
+
+for (i in 1:length(ps)) distplot <- distplot + stat_function(fun = dbeta, args=list(shape1=ps[i], shape2=100-ps[i]), color = cols[i], size = 1)
+distplot
+```
+
+### Monte Carlo sensitivity analysis
+
+I ran a Monte Carlo sensitivity analysis for the portion of the results that ignore cost and just assess the relative changes to environmental impact that result from reducing waste rates at different stages of the FSC. I created 100 replicate parameter sets by taking a random draw from the beta distribution for each parameter value, for both the FAO-derived waste rates and the food-nonfood proportions. I ran the entire analysis for each of the 100 replicates. The error bars shown on the figures are the 2.5% and 97.5% quantiles of the outcomes from those replicates.
+
+In addition to showing how much the results vary in magnitude when varying the input values using the chosen distributions, I also calculated how often the priority ranking swapped orders among the replicates.
+
+_**To do: include tables of results, including the number of times orders swapped**_
+
+_**To do: sensitivity analysis for the optimization part of the study.**_
+
+**Important note**: All sensitivity results are presented with the limitation that the uncertainty distributions are unknown. Therefore the error bars only show how much the outcome would vary if the input parameters vary within a fairly plausible range, not a true uncertainty of the outcome.
 
 \newpage
 
@@ -243,11 +285,11 @@ $$ W_u = W_0(1 - \frac{A}{N})$$
 We convert the expected diverted waste from a quantity in tons to a percentage which we call $W_{1}$:
 
 $$ W_1 = W_0(1 - \frac{D}{N})$$
-This gives us all the information shown in Figure 6.
+This gives us all the information shown in Figure 7.
 
 ![Information from ReFED and FAO](Q:/figures/makingcostcurve1.png)
 
-Since we know the value of $W$ at $C = 0$, one point on the curve $(C_1, W_1)$, and the lower asymptote $W_u$, we can find the value of $B$ and put a curve through the points as shown in Figure 7. We find $B$ by evaluating the equation for the cost curve, $W(C) = \frac{2(W_0 - W_u)}{e^{bC} + 1} + W_u$, at $(C_1, W_1)$ and solving for $B$:
+Since we know the value of $W$ at $C = 0$, one point on the curve $(C_1, W_1)$, and the lower asymptote $W_u$, we can find the value of $B$ and put a curve through the points as shown in Figure 8. We find $B$ by evaluating the equation for the cost curve, $W(C) = \frac{2(W_0 - W_u)}{e^{bC} + 1} + W_u$, at $(C_1, W_1)$ and solving for $B$:
 
 $$ B = \frac{1}{C_1} \log \bigg( 2\big( \frac{W_0 - W_u}{W_1 - W_u} \big) - 1 \bigg) $$
 
@@ -255,7 +297,7 @@ $$ B = \frac{1}{C_1} \log \bigg( 2\big( \frac{W_0 - W_u}{W_1 - W_u} \big) - 1 \b
 
 It would be desirable to have more data points for each intervention to get a better fit and also to estimate parameter uncertainty stemming from the data.
 
-Separate values for each parameter are calculated for each of the many sectors within each FSC stage. Figure 8 shows a representative cost curve for one sector from each food supply chain stage.
+Separate values for each parameter are calculated for each of the many sectors within each FSC stage. Figure 9 shows a representative cost curve for one sector from each food supply chain stage.
 
 ![Representative abatement cost curve for each supply chain stage](Q:/figures/sixstage_costcurve_refedcurvesbystage_representative.png){ width=50% }
 
@@ -277,7 +319,7 @@ I ran a separate optimization for four different values of $C_{total}$: 500, 100
 
 ## Results of optimization
 
-Taking GHG emissions as an example, the optimal waste rate across all sectors that is achieved with the cost allocation that minimizes emissions shows interesting patterns as total available FLW reduction funds change (Figure 9, top right-hand panel). For lower total investment in FLW reduction, the lowest total GHG emissions of the food system is achieved by investing most in FLW reduction at the food service and institutional stages, later followed by household and agricultural production stages, which are relatively more expensive to implement. The processing and retail sectors are modeled as being cheap to implement but with relatively low waste reduction, so it is optimal to invest relatively less in FLW reducion in those sectors.
+Taking GHG emissions as an example, the optimal waste rate across all sectors that is achieved with the cost allocation that minimizes emissions shows interesting patterns as total available FLW reduction funds change (Figure 10, top right-hand panel). For lower total investment in FLW reduction, the lowest total GHG emissions of the food system is achieved by investing most in FLW reduction at the food service and institutional stages, later followed by household and agricultural production stages, which are relatively more expensive to implement. The processing and retail sectors are modeled as being cheap to implement but with relatively low waste reduction, so it is optimal to invest relatively less in FLW reducion in those sectors.
 
 ![Optimal allocations across total cost values and across impact categories](Q:/figures/sixstage_costcurve_allocations4impacts_lineplot.png)
 
@@ -285,7 +327,7 @@ The optimal solution for different values of $C_{total}$ is different depending 
 
 ### Low overall impact reduction values
 
-Unfortunately, the absolute amount of environmental impact reduction estimated for even quite high levels of investment in FLW reduction is extremely anemic, according to this analysis. This is a result of the fairly low maximum waste reduction rate that I estimated from ReFED's numbers, as well as the fairly high cost of getting to that level. Figure 10 shows the reduction in the impact category that is targeted for minimization, relative to the baseline. Most of the reduction is achieved after investing only $500 million, with minimal additional reduction after that. The environmental impacts of the food system are less than 1% smaller in magnitude than the baseline. From this, we can either conclude that there is little realistic potential for reducing environmental impact of the food system by reducing food waste, or the weak result may be due mostly to overly pessimistic abatement cost curves. Increasing the realism of the cost curves will be a focus of work in the near future.
+Unfortunately, the absolute amount of environmental impact reduction estimated for even quite high levels of investment in FLW reduction is extremely anemic, according to this analysis. This is a result of the fairly low maximum waste reduction rate that I estimated from ReFED's numbers, as well as the fairly high cost of getting to that level. Figure 11 shows the reduction in the impact category that is targeted for minimization, relative to the baseline. Most of the reduction is achieved after investing only $500 million, with minimal additional reduction after that. The environmental impacts of the food system are less than 1% smaller in magnitude than the baseline. From this, we can either conclude that there is little realistic potential for reducing environmental impact of the food system by reducing food waste, or the weak result may be due mostly to overly pessimistic abatement cost curves. Increasing the realism of the cost curves will be a focus of work in the near future.
 
 ![Reductions in impacts relative to baseline](Q:/figures/sixstage_impactreduction_bytotalinvested.png){ width=50% }
 
@@ -299,6 +341,7 @@ This is documentation of the scripts on the [FWE GitHub repository](https://gith
 * `partial_sector_proportions.r`, `susb_by_foodcategory.r`, `qcew_by_foodcategory.r`: These scripts find the proportion of demand for sectors that are related to the food supply chain, for those sectors that are only partially FSC. There are different data sources used for different sectors.
 * `load_scenario_data.r`: This script loads the baseline food waste rate data (currently sourced from FAO) and a table that contains the data for each of the BEA/NAICS sectors including which FSC stage they are classified in, proportion of food outputs for sectors that are only partially in the FSC, and what FAO categories each sector maps to. Later this should include which LAFA categories each sector maps to. This script also sources the R script to build the USEEIO model with modified intermediate and final demand, `USEEIO2012_buildfunction.R`, and the Python script that evaluates the model `eeio_lcia.py`, which is called from within R. It also loads the formatted make and use tables created in the previous script. Finally, it defines a function which accepts a vector of waste reduction values across all sectors as input, modifies the make and use tables accordingly, builds the USEEIO model, runs it also with modified final demand, and returns the LCIA impact values as output.
 * `sixstage_scenario.r`: This script runs the model for all 25% waste reduction increments, and it runs the nonlinear optimization using the R package `Rsolnp` using the fake cost curves shown above.
+* `grid_sensitivity_parallel.r`: This script runs the sensitivity analysis for the 50% and 100% waste reductions.
 * `sixstage_figs.r`: This script includes code to make all the figures shown here.
 
 # Works cited
