--- a/Rmd/cost_analysis_v3.Rmd
+++ b/Rmd/cost_analysis_v3.Rmd
@@ -1,7 +1,7 @@
 ---
-title: 'FLW scenarios: methods and preliminary results (V3.1)'
+title: 'FLW scenarios: methods and preliminary results (V3.3)'
 author: "Quentin D. Read"
-date: "June 20, 2019"
+date: "June 27, 2019"
 header-includes:
   - \usepackage{caption}
 output: pdf_document
@@ -17,8 +17,9 @@ knitr::opts_chunk$set(echo = TRUE)
 * V1 created May 15, 2019
 * V2 created June 4, 2019
 * V3 created June 18, 2019 (including cost curve parameters from ReFED)
-  * V3.1 created June 20, 2019 (correct error in how total cost was divided up, which impacts final result)
-  * V3.2 created June 25, 2019 (include initial sensitivity analysis)
+  + V3.1 created June 20, 2019 (correct error in how total cost was divided up, which impacts final result)
+  + V3.2 created June 25, 2019 (include initial sensitivity analysis)
+  + V3.3 created June 27, 2019 (correct additional errors in all analysis, add more sensitivity results, add eutrophication)
 
 # Overarching question
 
@@ -159,28 +160,34 @@ Ignoring the cost or feasibility of reducing FLW for the moment, I ran the model
 For all impact categories, I calculated the environmental impact associated with satisfying all food system-related demand relative to the baseline impact.
 Therefore, the percentage reductions in impact given in the figures below represent reduction of the summed impacts across the entire food supply chain from farm to fork, when we reduce food waste.
 
-Taking 50% waste reduction per sector as a reasonable but ambitious goal, I determined the sector in which reducing waste by 50% would reduce environmental impact the most, then repeated until all 6 sectors had 50% waste reduction. Results for each of four impact categories (GHG emissions, energy use, land use, and water use) are shown in Figures 1-4. The resulting pattern of environmental impact is an asymptotic abatement curve because we are choosing sectors with successively less importance for the given impact category.
+Taking 50% waste reduction per sector as a reasonable but ambitious goal, I determined the sector in which reducing waste by 50% would reduce environmental impact the most, then repeated until all 6 sectors had 50% waste reduction. Results for each of five impact categories (GHG emissions, energy use, land use, water use, and eutrophication potential or N runoff) are shown in Figures 1-4. 
+*Note: all error bars shown in figures are derived from a semi-quantitative sensitivity analysis described below in this document.*
+The resulting pattern of environmental impact is an asymptotic abatement curve because we are choosing sectors with successively less importance for the given impact category.
 The individual FSC sectors differ significantly in terms of intensity of impact in the different categories, leading to dramatically different results in terms of which FSC stage reduces impact the most by reducing FLW. 
 
 One interesting thing to note here is that the sector where the impact of reducing FLW is greatest is not necessarily the sector that directly consumes that resource the most. It may be the indirect inputs to that sector that result in the decrease, since reducing FLW down the chain reduces demand from sectors up the chain.
 
-![GHG emissions reduction with FLW reduction](Q:/figures/sixstage_grid_co2by50pct.png){ width=50% }
+![GHG emissions reduction with FLW reduction](Q:/figures/sixstage_gridwithci_co2by50pct.png){ width=50% }
 
-![Energy use reduction with FLW reduction](Q:/figures/sixstage_grid_energyby50pct.png){ width=50% }
+![Energy use reduction with FLW reduction](Q:/figures/sixstage_gridwithci_energyby50pct.png){ width=50% }
 
-![Land use reduction with FLW reduction](Q:/figures/sixstage_grid_landby50pct.png){ width=50% }
+![Land use reduction with FLW reduction](Q:/figures/sixstage_gridwithci_landby50pct.png){ width=50% }
 
-![Water use reduction with FLW reduction](Q:/figures/sixstage_grid_waterby50pct.png){ width=50% }
+![Water use reduction with FLW reduction](Q:/figures/sixstage_gridwithci_waterby50pct.png){ width=50% }
 
-Across the four impact categories shown here, the top three sectors in terms of impact abated when cutting waste by 50% are household consumption, food service, and food processing. This makes sense because the food service industry and food processing industry both have fairly high direct impacts, and the household consumption phase has a very high volume of demand. The primary agricultural production stage is less influential because it is the furthest upstream of the supply chain, so reducing waste at that stage only reduces the direct impacts there and the benefits do not "propagate" upstream. Reducing waste in the retail sector yields a smaller impact reduction because, at least according to the FAO numbers we are using, the baseline waste rate is quite low and there is little room for improvement. Finally, the institutional consumption sector is relatively small in size compared to the other consumption sectors, though it has the same baseline waste rate, and therefore cutting waste there has a small effect. 
+![Eutrophication potential reduction with FLW reduction](Q:/figures/sixstage_gridwithci_eutrby50pct.png){ width=50% }
+
+Across the five impact categories shown here, the top three sectors in terms of impact abated when cutting waste by 50% are household consumption, food service, and food processing. This makes sense because the food service industry and food processing industry both have fairly high direct impacts, and the household consumption phase has a very high volume of demand. Also, both food service industry and household consumption are downstream on the supply chain, so reducing waste at those stages impacts demand and thus output of previous stages. The primary agricultural production stage is less influential because it is the furthest upstream of the supply chain, so reducing waste at that stage only reduces the direct impacts there and the benefits do not "propagate" upstream. Reducing waste in the retail sector yields a smaller impact reduction because, at least according to the FAO numbers we are using, the baseline waste rate is quite low and there is little room for improvement. Finally, the institutional consumption sector is relatively small in size compared to the other consumption sectors, though it has the same baseline waste rate, and therefore cutting waste there has a small effect. 
 
 \newpage
 
 To show the magnitude of impact reduction you could get by completely eliminating food waste, here are the same graphs shown for 100% reduction (Figure 5). The sectors are not labeled in this figure but they are ordered differently for each impact category.
 
-![All environmental impacts reduction with 100% FLW reduction](Q:/figures/sixstage_grid_allcategoriesby100pct.png){ width=50% }
+![All environmental impacts reduction with 100% FLW reduction](Q:/figures/sixstage_gridwithci_allcategoriesby100pct.png){ width=50% }
 
 Probably due to differing methodologies of both food waste rates and environmental impacts, these magnitudes might be somewhat different than other estimates. Our analysis shows that completely eliminating food waste from the USA food supply chain would decrease water use and energy use by the food system by roughly 20%. I believe this number is fairly realistic.
+
+\newpage
 
 ## 5. Sensitivity analysis
 
@@ -206,7 +213,7 @@ Unfortunately, there are no formal uncertainty numbers given for any of the data
 
 Both the FAO baseline waste rate data and the food-nonfood proportion data are proportions bounded between 0 and 1. A sensible distribution to use in this case is the beta distribution which is defined on the interval [0, 1]. The beta distribution has two parameters. We can write the beta distribution this way, which will have its mode at $p$. The value of $f$ determines the width of the peak; the higher $f$, the narrower the peak.
 
-$$Beta(fp, f(1-p))$$
+$$\mathrm{Beta}(fp, f(1-p))$$
 
 I chose the value $f = 100$ for all distributions. Figure 6 shows beta distributions with $f = 100$ and modes of 0.1, 0.2, 0.4, 0.5, 0.6, 0.8, and 0.9. Modes close to 0 or 1 have narrower distributions than modes close to 0.5, which makes sense.
 
@@ -229,9 +236,21 @@ I ran a Monte Carlo sensitivity analysis for the portion of the results that ign
 
 In addition to showing how much the results vary in magnitude when varying the input values using the chosen distributions, I also calculated how often the priority ranking swapped orders among the replicates.
 
-_**To do: include tables of results, including the number of times orders swapped**_
+Table 4 shows the results of the sensitivity analysis, showing the mean priority ranking of the stages for each impact category, and the percentage of draws where each stage did not change its position. A high percentage means that the relative priority is not very sensitive to variation in the parameters. The mean ranks are not far from 1-6 and the percentages are all high indicating that the outcome is not too sensitive to the level of uncertainty that we set *a priori*.
 
-_**To do: sensitivity analysis for the optimization part of the study.**_
+```{r echo = FALSE, message = FALSE}
+library(flextable)
+meanrank_allcats <- read.csv('Q:/scenario_results/sensitivity_grid_summarytable.csv', stringsAsFactors = FALSE)
+meanrank_ft <- meanrank_allcats %>%
+  mutate(proportion_not_swapped = paste0(proportion_not_swapped, '%')) %>%
+  flextable %>%
+  theme_vanilla %>%
+  merge_v(j = 'impact_category') %>%
+  set_header_labels(impact_category = 'category', stage_reduced = 'stage', mean_rank = 'mean rank', proportion_not_swapped = 'percent not swapped')
+meanrank_ft
+```
+
+_**Here I will add sensitivity analysis for the optimization part of the study when it is done.**_
 
 **Important note**: All sensitivity results are presented with the limitation that the uncertainty distributions are unknown. Therefore the error bars only show how much the outcome would vary if the input parameters vary within a fairly plausible range, not a true uncertainty of the outcome.
 
@@ -261,7 +280,7 @@ Most of the numbers we need to create the curves are provided for each intervent
 * $D$: Diversion potential of the intervention, or waste averted if the intervention is as effective as expected. **Source: ReFED.**
 * $C_{1}$: Cost of reducing waste to the diversion potential level. This cost value is the total for each stage, so for each sector, the cost value is multiplied by the proportion output within that stage represented by the sector. **Source: ReFED.**
 
-Table 4 shows the values derived from the report for net waste $N$, addressable waste $A$, diversion potential $D$, and cost of reducing waste to the diversion potential level $C_1$.
+Table 5 shows the values derived from the report for net waste $N$, addressable waste $A$, diversion potential $D$, and cost of reducing waste to the diversion potential level $C_1$.
 
 ```{r echo = FALSE}
 suppressMessages(library(dplyr))
@@ -333,6 +352,16 @@ Unfortunately, the absolute amount of environmental impact reduction estimated f
 
 \newpage 
 
+# Discussion and interpretation
+
+These are current ideas for the general take-home messages or stories from each part of the analysis.
+
+The first part of the analysis, in which we calculate the total impact of the food system on a variety of different environmental categories when food loss and waste decrease by 50% or 100% in one or more FSC stages has two main findings. First, it gives us an estimate of the maximum benefit we could possibly get if the U.S. relentlessly pursues FLW reduction as a policy goal. I believe that the result of approximately 20% reduction of all impact categories is fairly realistic. The second finding is that it identifies which sectors have the highest possible impact reductions, namely food processing industry, food service industry, and household consumption. The primary agricultural production, institutional food service, and retail sectors have little effect on total impact even when their waste is drastically reduced. This is a useful finding that can help target FLW reduction efforts. It emphasizes the major role of the food service industry. These results also somewhat provide a counterpoint to the consistent narrative that most food waste in developed nations occurs at the home. If our metric is environmental impact of waste, rather than sheer volume of waste, household food waste remains a big contributor but is rarely the worst offender. This could be used to send the message that hectoring individuals for their wasteful behavior is not necessarily the most effective means of reducing the food system's environmental burden. Finally, while the environmental benefit of FLW reduction could be high, it is bounded at ~20% of the food system's current impact. Clearly, FLW reduction is not a cure-all for the environmental ills inflicted by the food system in the United States. Other "harder" strategies, potentially including diet shifts or lifestyle changes, will need to accompany the "easy" fix of FLW reduction.
+
+The second part of the analysis is somewhat more questionable in terms of the absolute value of the result, since the cost data for the interventions may not be of great quality. However, if we assume that we are at least somewhere in the right order of magnitude for what waste reductions can be achieved by implementing a single FLW reduction intervention, our results show that the ceiling of effectiveness of a single intervention is not too high. This makes sense because even within a single stage of the FSC, food loss and waste has a multitude of causes. Each single intervention usually only addresses one cause, so it can only address the (often small) proportion of the waste that is due to that cause. Therefore our take-home message could be that since we get diminishing returns from each single intervention, it will be necessary to take a "many-pronged" approach both within and among sectors. If we can trust the prioritization shown in Figure 10, we can say more specifically that it is likely that investing in reduction in the food service and retail sectors will give a reasonably good return on investment. Contrastingly, consumer-facing campaigns to reduce household waste are quite expensive relative to other interventions and therefore might not be the best investment. The waste rates at the processing and retail stages is low enough that investing in FLW reduction at those stages is not shown to be cost-effective.
+
+\newpage
+
 # Code pipeline used for analysis
 
 This is documentation of the scripts on the [FWE GitHub repository](https://github.com/qdread/fwe) that are needed to do this analysis. The underlying data is on the FWE group space on the SESYNC server at `/nfs/fwe-data/`, and some of the lookup tables are currently on my own space on the SESYNC server at `/nfs/qread-data/`. Everything could be moved to the FWE space if others want to replicate the analysis.
@@ -342,7 +371,7 @@ This is documentation of the scripts on the [FWE GitHub repository](https://gith
 * `load_scenario_data.r`: This script loads the baseline food waste rate data (currently sourced from FAO) and a table that contains the data for each of the BEA/NAICS sectors including which FSC stage they are classified in, proportion of food outputs for sectors that are only partially in the FSC, and what FAO categories each sector maps to. Later this should include which LAFA categories each sector maps to. This script also sources the R script to build the USEEIO model with modified intermediate and final demand, `USEEIO2012_buildfunction.R`, and the Python script that evaluates the model `eeio_lcia.py`, which is called from within R. It also loads the formatted make and use tables created in the previous script. Finally, it defines a function which accepts a vector of waste reduction values across all sectors as input, modifies the make and use tables accordingly, builds the USEEIO model, runs it also with modified final demand, and returns the LCIA impact values as output.
 * `sixstage_scenario.r`: This script runs the model for all 25% waste reduction increments, and it runs the nonlinear optimization using the R package `Rsolnp` using the fake cost curves shown above.
 * `grid_sensitivity_parallel.r`: This script runs the sensitivity analysis for the 50% and 100% waste reductions.
-* `sixstage_figs.r`: This script includes code to make all the figures shown here.
+* `sixstage_figs.r`, `sixstage_sens_figs.r`: These scripts include code to make all the figures shown here. The second script adds error bars from the sensitivity analysis.
 
 # Works cited
 
