correct interpretation in discussion

--- a/Rmd/cost_analysis_v3.Rmd
+++ b/Rmd/cost_analysis_v3.Rmd
@@ -338,11 +338,11 @@ I ran a separate optimization for four different values of $C_{total}$: 500, 100
 
 ## Results of optimization
 
-Taking GHG emissions as an example, the optimal waste rate across all sectors that is achieved with the cost allocation that minimizes emissions shows interesting patterns as total available FLW reduction funds change (Figure 10, top right-hand panel). For lower total investment in FLW reduction, the lowest total GHG emissions of the food system is achieved by investing most in FLW reduction at the food service and institutional stages, later followed by household and agricultural production stages, which are relatively more expensive to implement. The processing and retail sectors are modeled as being cheap to implement but with relatively low waste reduction, so it is optimal to invest relatively less in FLW reducion in those sectors.
+Taking GHG emissions as an example, the optimal waste rate across all sectors that is achieved with the cost allocation that minimizes emissions shows interesting patterns as total available FLW reduction funds change (Figure 10, top right-hand panel). For lower total investment in FLW reduction, the lowest total GHG emissions of the food system is achieved by investing most in FLW reduction at the food service and agricultural production stages, later followed by household and institutional food service stages, which are relatively more expensive to implement. The processing and retail sectors are modeled as being cheap to implement but with relatively low waste reduction, so it is optimal to invest relatively less in FLW reduction in those sectors.
 
 ![Optimal allocations across total cost values and across impact categories](Q:/figures/sixstage_costcurve_allocations4impacts_lineplot.png)
 
-The optimal solution for different values of $C_{total}$ is different depending on what environmental impact category we aim to minimize, particularly at lower values of $C_{total}$. For example, if land use is what we want to minimize, and we have $500 million to invest, waste reduction should target the agricultural production sector. Otherwise, the foodservice and institutional foodservice sectors are better targets, according to this analysis.
+The optimal solution for different values of $C_{total}$ is different depending on what environmental impact category we aim to minimize, particularly at lower values of $C_{total}$. For example, if land use is what we want to minimize, and we have $500 million to invest, waste reduction should target the agricultural production sector. At higher levels of investment, household consumption overtakes agricultural production, according to this analysis.
 
 ### Low overall impact reduction values
 
@@ -358,7 +358,7 @@ These are current ideas for the general take-home messages or stories from each 
 
 The first part of the analysis, in which we calculate the total impact of the food system on a variety of different environmental categories when food loss and waste decrease by 50% or 100% in one or more FSC stages has two main findings. First, it gives us an estimate of the maximum benefit we could possibly get if the U.S. relentlessly pursues FLW reduction as a policy goal. I believe that the result of approximately 20% reduction of all impact categories is fairly realistic. The second finding is that it identifies which sectors have the highest possible impact reductions, namely food processing industry, food service industry, and household consumption. The primary agricultural production, institutional food service, and retail sectors have little effect on total impact even when their waste is drastically reduced. This is a useful finding that can help target FLW reduction efforts. It emphasizes the major role of the food service industry. These results also somewhat provide a counterpoint to the consistent narrative that most food waste in developed nations occurs at the home. If our metric is environmental impact of waste, rather than sheer volume of waste, household food waste remains a big contributor but is rarely the worst offender. This could be used to send the message that hectoring individuals for their wasteful behavior is not necessarily the most effective means of reducing the food system's environmental burden. Finally, while the environmental benefit of FLW reduction could be high, it is bounded at ~20% of the food system's current impact. Clearly, FLW reduction is not a cure-all for the environmental ills inflicted by the food system in the United States. Other "harder" strategies, potentially including diet shifts or lifestyle changes, will need to accompany the "easy" fix of FLW reduction.
 
-The second part of the analysis is somewhat more questionable in terms of the absolute value of the result, since the cost data for the interventions may not be of great quality. However, if we assume that we are at least somewhere in the right order of magnitude for what waste reductions can be achieved by implementing a single FLW reduction intervention, our results show that the ceiling of effectiveness of a single intervention is not too high. This makes sense because even within a single stage of the FSC, food loss and waste has a multitude of causes. Each single intervention usually only addresses one cause, so it can only address the (often small) proportion of the waste that is due to that cause. Therefore our take-home message could be that since we get diminishing returns from each single intervention, it will be necessary to take a "many-pronged" approach both within and among sectors. If we can trust the prioritization shown in Figure 10, we can say more specifically that it is likely that investing in reduction in the food service and retail sectors will give a reasonably good return on investment. Contrastingly, consumer-facing campaigns to reduce household waste are quite expensive relative to other interventions and therefore might not be the best investment. The waste rates at the processing and retail stages is low enough that investing in FLW reduction at those stages is not shown to be cost-effective.
+The second part of the analysis is somewhat more questionable in terms of the absolute value of the result, since the cost data for the interventions may not be of great quality. However, if we assume that we are at least somewhere in the right order of magnitude for what waste reductions can be achieved by implementing a single FLW reduction intervention, our results show that the ceiling of effectiveness of a single intervention is not too high. This makes sense because even within a single stage of the FSC, food loss and waste has a multitude of causes. Each single intervention usually only addresses one cause, so it can only address the (often small) proportion of the waste that is due to that cause. Therefore our take-home message could be that since we get diminishing returns from each single intervention, it will be necessary to take a "many-pronged" approach both within and among sectors. If we can trust the prioritization shown in Figure 10, we can say more specifically that it is likely that investing in reduction in the agricultural production and food service sectors will give a reasonably good return on investment. Contrastingly, consumer-facing campaigns to reduce household waste are quite expensive relative to other interventions and therefore might not be the best investment. The waste rates at the processing and retail stages is low enough that investing in FLW reduction at those stages is not shown to be cost-effective.
 
 \newpage
 
